hphp/test/zend/good/ext/standard/tests/time/strptime_basic.php.skipif
<?php 
	if (!function_exists('strptime')) { 
		die("skip - strptime() function not available in this build"); 
	}	 
        if(PHP_OS == 'Darwin') die("skip - strptime() behaves differently on Darwin");
?>
