hphp/test/zend/bad/ext/mbstring/tests/mb_send_mail06.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
	die('skip.. Not valid for Windows');
}
if (!function_exists("mb_send_mail") || !mb_language("Traditional Chinese")) {
	die("skip mb_send_mail() not available");
}
if (!@mb_internal_encoding('BIG5')) {
	die("skip BIG5 encoding is not available on this platform");
}
?>